--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header .overlay {
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url('https://www.wallpapersun.com/wp-content/uploads/2020/09/Zoro-Wallpaper-26.jpg') black no-repeat center center scroll;
+    background: url('https://mfiles.alphacoders.com/876/876549.png') black no-repeat center center scroll;
   }
   header video {
     display: none;
