--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header .overlay {
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url('https://mfiles.alphacoders.com/876/876549.png') black no-repeat center center scroll;
+    background: url('https://i.pinimg.com/originals/39/c9/71/39c971f959c53a310a5d54830a972d25.jpg') black no-repeat center center scroll;
   }
   header video {
     display: none;
